[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newamerica-cms"
classifiers = ["Private :: Do Not Upload"]
version = "0"
dependencies = [
    # Django related
    'Django >= 3.2.6, < 4',
    'Wagtail >= 5.0.5, < 5.1',
    'Celery >= 4.4, < 5.0',
    'dj-database-url >= 1.3.0, < 2',
    'django-cors-headers >= 3.13.0, < 4',
    'django-storages >= 1.13, < 2',
    'django-compressor >= 3.0',
    'django-anymail >= 9.0, < 10',
    'django-filter',
    'django-modelcluster',
    'whitenoise >= 6.4, <7',
    'django-redis >= 5.2, <6',
    'django-basic-auth-ip-whitelist >= 0.5',
    'django-csp >= 3.7, <4',

    # Other packages
    'Wand >= 0.6.11',
    'createsend >= 7.0, <8',
    'psycopg2 >=2.8, <3',
    'WeasyPrint==51',
    'python-docx >= 0.8.11',
    'boto3 >= 1.26, <2',
    'elasticsearch >= 5.5, <6',
    'redis >= 3.4.1, < 4',
    # See https://github.com/wagtail/wagtail-autocomplete
    'wagtail-autocomplete >= 0.10.0',
    # See https://pypi.org/project/django-multiselectfield/
    'django-multiselectfield >= 0.1.12',
    'gunicorn == 20.0.4',
    'wagtail-headless-preview == 0.7',
]

[project.optional-dependencies]
prod = [
    'sentry-sdk >= 1.19.1',
]

test = [
    'Faker >= 18.4, < 19',
]

dev = [
    'fabric >= 2.6.0, < 3',
    'ruff',
    'black',
]

[tool.black]
target-version = ['py310']
line-length = 88

[tool.ruff]
select = ['E', 'F', 'I']
ignore = ['E501']
